--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -84,11 +84,36 @@ div.bibtex pre { font-size: 75%; overflow: auto;  width: 100%; padding: 0em 0em;
 
 <h4 style="margin-bottom:0px;padding-top:10px;">Journal</h4>
 <ul class="biblist">
+	
+
+    <li ><p>
+    Yifeng Zheng, <b>Xingliang Yuan</b>, Xinyu Wang, Jinghua Jiang, Cong Wang, and Xiaolin Gui,  
+    <br><b>Towards Encrypted Cloud Media Centre with Secure Deduplication</b><br>
+<i>IEEE Transactions on Multimedia (TMM)</i>, 
+2016.
+    <br />
+    <a href="javascript:toggleBibtex('ZYWJWG-TMM16')">[BibTeX]</a>
+    <a href="">[Link]</a>
+    </p>
+    <div id="bib_ZYWJWG-TMM16" class="bibtex noshow">
+    <pre>@article{ZYWJWG-TMM16,
+  author  = {Yifeng Zheng and Xingliang Yuan and Xinyu Wang and Jinghua Jiang and Cong Wang and Xiaolin Gui, },
+  title   = {Towards Encrypted Cloud Media Centre with Secure Deduplication},
+  journal = {IEEE Transactions on Multimedia (TMM)},
+  year = {2016},
+  publisher={IEEE}
+}</pre>
+    </div>
+    </li>
+    
+	
     <li ><p>
     <b>Xingliang Yuan</b>, Xinyu Wang, Cong Wang, Jian Weng, and Kui Ren, 
     <br><b>Enabling Secure and Fast Indexing for Privacy-assured Healthcare Monitoring via Compressive Sensing</b><br>
 <i>IEEE Transactions on Multimedia (TMM)</i>,
-Accepted, 
+vol. 18,
+no. 10,
+pp. 1-13,
 2016.
     <br />
     <a href="javascript:toggleBibtex('YWWWR-TMM16')">[BibTeX]</a>
@@ -99,6 +124,9 @@ Accepted,
   author  = {Xingliang Yuan and Xinyu Wang and Cong Wang and Jian Weng and Kui Ren},
   title   = {Enabling Secure and Fast Indexing for Privacy-assured Healthcare Monitoring via Compressive Sensing},
   journal = {IEEE Transactions on Multimedia (TMM)},
+  volume={18},
+  number={10},
+  pages={1--13},
   year = {2016},
   publisher={IEEE}
 }</pre>
