--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -85,6 +85,27 @@ div.bibtex pre { font-size: 75%; overflow: auto;  width: 100%; padding: 0em 0em;
 <h4 style="margin-bottom:0px;padding-top:10px;">Journal</h4>
 <ul class="biblist">
 	
+<li ><p>
+ <b>Xingliang Yuan</b>, Xingyu Wang, Cong Wang, Anna Squicciarini, and Kui Ren, <br>
+ <b>Towards Privacy-preserving and Practical Image-centric Social Discovery</b><br>
+<i>IEEE Transactions on Dependable and Secure Computing (TDSC)</i>, 2016
+<br />
+<a href="javascript:toggleBibtex('YWWSR-TDSC16')">[BibTeX]</a>
+<a href="" target="_blank">[Link]</a> 
+</p>
+<div id="bib_YWWSR-TDSC16" class="bibtex noshow">
+<pre>
+@inproceedings{YWWSR-TDSC16,
+  author = {Xingliang Yuan and Xingyu Wang and Cong Wang and Anna Squicciarini and Kui Ren},
+  title = {Towards Privacy-preserving and Practical Image-centric Social Discovery},
+  booktitle = {IEEE Transactions on Dependable and Secure Computing (TDSC)},
+  year = {2016}
+}
+</pre>
+</div>
+</li>
+
+
 
     <li ><p>
     Yifeng Zheng, <b>Xingliang Yuan</b>, Xinyu Wang, Jinghua Jiang, Cong Wang, and Xiaolin Gui,  
