--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -138,7 +138,7 @@ pp. 1-13,
 2016.
     <br />
     <a href="javascript:toggleBibtex('YWWWR-TMM16')">[BibTeX]</a>
-    <a href="">[Link]</a>
+    <a href="http://ieeexplore.ieee.org/abstract/document/7552468/">[Link]</a>
     </p>
     <div id="bib_YWWWR-TMM16" class="bibtex noshow">
     <pre>@article{YWWWR-TMM16,
