--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -98,7 +98,7 @@ div.bibtex pre { font-size: 75%; overflow: auto;  width: 100%; padding: 0em 0em;
 @inproceedings{YWWSR-TDSC16,
   author = {Xingliang Yuan and Xingyu Wang and Cong Wang and Anna Squicciarini and Kui Ren},
   title = {Towards Privacy-preserving and Practical Image-centric Social Discovery},
-  booktitle = {IEEE Transactions on Dependable and Secure Computing (TDSC)},
+  booktitle = {and Secure Computing (TDSC)},
   year = {2016}
 }
 </pre>
