--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -82,13 +82,390 @@ div.bibtex pre { font-size: 75%; overflow: auto;  width: 100%; padding: 0em 0em;
 
 
 
+<h4 style="margin-bottom:0px;padding-top:10px;">Journal</h4>
+<ul class="biblist">
+	
+<li ><p>
+ <b>Xingliang Yuan</b>, Xingyu Wang, Cong Wang, Anna Squicciarini, and Kui Ren, <br>
+ <b>Towards Privacy-preserving and Practical Image-centric Social Discovery</b><br>
+<i>IEEE Transactions on Dependable and Secure Computing (TDSC)</i>, 2016
+<br />
+<a href="javascript:toggleBibtex('YWWSR-TDSC16')">[BibTeX]</a>
+<a href="" target="_blank">[Link]</a> 
+</p>
+<div id="bib_YWWSR-TDSC16" class="bibtex noshow">
+<pre>
+@inproceedings{YWWSR-TDSC16,
+  author = {Xingliang Yuan and Xingyu Wang and Cong Wang and Anna Squicciarini and Kui Ren},
+  title = {Towards Privacy-preserving and Practical Image-centric Social Discovery},
+  booktitle = {and Secure Computing (TDSC)},
+  year = {2016}
+}
+</pre>
+</div>
+</li>
 
+
+
+    <li ><p>
+    Yifeng Zheng, <b>Xingliang Yuan</b>, Xinyu Wang, Jinghua Jiang, Cong Wang, and Xiaolin Gui,  
+    <br><b>Towards Encrypted Cloud Media Centre with Secure Deduplication</b><br>
+<i>IEEE Transactions on Multimedia (TMM)</i>, 
+2016.
+    <br />
+    <a href="javascript:toggleBibtex('ZYWJWG-TMM16')">[BibTeX]</a>
+    <a href="">[Link]</a>
+    </p>
+    <div id="bib_ZYWJWG-TMM16" class="bibtex noshow">
+    <pre>@article{ZYWJWG-TMM16,
+  author  = {Yifeng Zheng and Xingliang Yuan and Xinyu Wang and Jinghua Jiang and Cong Wang and Xiaolin Gui, },
+  title   = {Towards Encrypted Cloud Media Centre with Secure Deduplication},
+  journal = {IEEE Transactions on Multimedia (TMM)},
+  year = {2016},
+  publisher={IEEE}
+}</pre>
+    </div>
+    </li>
+    
+	
+    <li ><p>
+    <b>Xingliang Yuan</b>, Xinyu Wang, Cong Wang, Jian Weng, and Kui Ren, 
+    <br><b>Enabling Secure and Fast Indexing for Privacy-assured Healthcare Monitoring via Compressive Sensing</b><br>
+<i>IEEE Transactions on Multimedia (TMM)</i>,
+vol. 18,
+no. 10,
+pp. 1-13,
+2016.
+    <br />
+    <a href="javascript:toggleBibtex('YWWWR-TMM16')">[BibTeX]</a>
+    <a href="http://ieeexplore.ieee.org/abstract/document/7552468/">[Link]</a>
+    </p>
+    <div id="bib_YWWWR-TMM16" class="bibtex noshow">
+    <pre>@article{YWWWR-TMM16,
+  author  = {Xingliang Yuan and Xinyu Wang and Cong Wang and Jian Weng and Kui Ren},
+  title   = {Enabling Secure and Fast Indexing for Privacy-assured Healthcare Monitoring via Compressive Sensing},
+  journal = {IEEE Transactions on Multimedia (TMM)},
+  volume={18},
+  number={10},
+  pages={1--13},
+  year = {2016},
+  publisher={IEEE}
+}</pre>
+    </div>
+    </li>
+
+
+    <li ><p>
+    Helei Cui, <b>Xingliang Yuan</b>, and Cong Wang, 
+    <br><b>Harnessing Encrypted Data in Cloud for Secure and Efficient Mobile Image Sharing</b><br>
+<i>IEEE Transactions on Mobile Computing (TMC)</i>,
+2016.
+    <br />
+    <a href="javascript:toggleBibtex('CYW-TMC16')">[BibTeX]</a>
+    <a href="http://ieeexplore.ieee.org/document/7524781/?arnumber=7524781&tag=1">[Link]</a>
+    </p>
+    <div id="bib_CYW-TMC16" class="bibtex noshow">
+    <pre>@article{CYW-TMC16,
+  author  = {Helei Cui and Xingliang Yuan and Cong Wang},
+  title   = {Harnessing Encrypted Data in Cloud for Secure and Efficient Mobile Image Sharing},
+  journal = {IEEE Transactions on Mobile Computing (TMC)},
+  year = {2016},
+  publisher={IEEE}
+}</pre>
+    </div>
+    </li>
+
+    <li ><p>
+     <b>Xingliang Yuan</b>, Xinyu Wang, Jinfan Wang, Yilei Chu, Cong Wang, Jianping Wang, Marie-Jose Montpetit, and Shucheng Liu, 
+    <br><b>Enabling Secure and Efficient Video Delivery through Encrypted In-network Caching</b><br>
+<i>IEEE Journal on Selected Areas in Communications (JSAC)</i>, 
+vol. 34,
+no. 8,
+pp. 1-14,
+2016.
+    <br />
+    <a href="javascript:toggleBibtex('YWWCWWML-JSAC16')">[BibTeX]</a>
+    <a href="http://ieeexplore.ieee.org/document/7485895/?arnumber=7485895">[Link]</a>
+    </p>
+    <div id="bib_YWWCWWML-JSAC16" class="bibtex noshow">
+    <pre>@article{YWWCWWML-JSAC16,
+  author  = {Xingliang Yuan and Xinyu Wang and Jinfan Wang and Yilei Chu and Cong Wang and Jianping Wang and Marie-Jose Montpetit and Shucheng Liu},
+  title   = {Enabling Secure and Efficient Video Delivery through Encrypted In-network Caching},
+  journal = {IEEE Journal on Selected Areas in Communications (JSAC)},
+  volume={34},
+  number={8},
+  pages={1--14},
+  year = {2016},
+  publisher={IEEE}
+}</pre>
+    </div>
+    </li>
+      </ul  >
+
+
+      <h4 style="margin-bottom:0px;padding-top:20px;">Conference</h4>
+
+    <ul class="biblist">
+<li ><p>
+<b>Xingliang Yuan</b>, Huayi Duan, and Cong Wang,
+<br><b>Bringing Execution Assurances of Pattern Matching in Outsourced Middleboxes</b><br>
+<i>IEEE International Conference on Network Protocols (ICNP)</i>, Singapore, 2016. (Acceptance ratio: 46/229 = 20%) 
+<br/>
+<a href="javascript:toggleBibtex('YDW-ICNP16')">[BibTeX]</a>
+<a href="" target="_blank">[Link]</a> 
+</p>
+<div id="bib_YDW-ICNP16" class="bibtex noshow">
+<pre>
+@inproceedings{YDW-ICNP16,
+  author = {Xingliang Yuan and Huayi Duan and and Cong Wang},
+  title = {Bringing Execution Assurances of Pattern Matching in Outsourced Middleboxes},
+  booktitle = {IEEE International Conference on Network Protocols (ICNP)},
+  year = {2016}
+}
+</pre>
+</div>
+</li>
+
+<li ><p>
+ Chengcheng Dai, <b>Xingliang Yuan</b>, and Cong Wang, 
+<br><b>Privacy-Preserving Ridesharing Recommendation in Geosocial Networks</b><br>
+<i>International Conference on Computational Social Networks (CSoNet)</i>, Ho Chi Minh City, Viet Nam, 2016. (<b>Invited Paper</b>) 
+<br />
+<a href="javascript:toggleBibtex('DYW-CSoNet16')">[BibTeX]</a>
+<a href="http://link.springer.com/chapter/10.1007/978-3-319-42345-6_17" target="_blank">[Link]</a> 
+</p>
+<div id="bib_DYW-CSoNet16" class="bibtex noshow">
+<pre>
+@inproceedings{DYW-CSoNet16,
+  author = {Chengcheng Dai and Xingliang Yuan and Cong Wang},
+  title = {Privacy-Preserving Ridesharing Recommendation in Geosocial Networks},
+  booktitle = {International Conference on Computational Social Networks (CSoNet)},
+  year = {2016}
+}
+</pre>
+</div>
+</li>
+
+
+<li ><p>
+ <b>Xingliang Yuan</b>, Xinyu Wang, Cong Wang, Chen Qian, and Jianxiong Lin,
+<br><b>Building an Encrypted, Distributed, and Searchable Key-value Store</b><br>
+<i>ACM Asia Conference on Computer and Communications Security (AISACCS)</i>, Xi'an, China,
+2016. (Acceptance ratio: 73/350 = 20.9%)
+<br />
+<a href="javascript:toggleBibtex('YWWQL-ASIACCS16')">[BibTeX]</a>
+<a href="http://dl.acm.org/citation.cfm?id=2897852" target="_blank">[Link]</a> 
+<a href="https://github.com/CongGroup/BlindDB"  target="_blank">[Code]</a> 
+</p>
+<div id="bib_YWWQL-ASIACCS16" class="bibtex noshow">
+<pre>
+@inproceedings{YWWQL-ASIACCS16,
+  author = {Xingliang Yuan and Xinyu Wang and Cong Wang and Chen Qian and and Jianxiong Lin},
+  title = {Building an Encrypted, Distributed, and Searchable Key-value Store},
+  booktitle = {ACM Asia Conference on Computer and Communications Security (AISACCS)},
+  year = {2016}
+}
+</pre>
+</div>
+</li>
+
+
+<li ><p>
+ <b>Xingliang Yuan</b>, Xinyu Wang, Jianxiong Lin, and Cong Wang, 
+<br><b>Privacy-preserving Deep Packet Inspection in Outsourced Middleboxes</b><br>
+<i>IEEE International Conference on Computer Communications (INFOCOM)</i>, San Francisco, USA, 2016. (Acceptance ratio: 300/1644 = 18.25%)
+<br />
+<a href="javascript:toggleBibtex('YWLW-INFOCOM16')">[BibTeX]</a>
+<a href="http://ieeexplore.ieee.org/document/7524526/?arnumber=7524526" target="_blank">[Link]</a> 
+</p>
+<div id="bib_YWLW-INFOCOM16" class="bibtex noshow">
+<pre>
+@inproceedings{YWLW-INFOCOM16,
+  author = {Xingliang Yuan and Xinyu Wang and Jianxiong Lin and Cong Wang},
+  title = {Privacy-preserving Deep Packet Inspection in Outsourced Middleboxes},
+  booktitle = {IEEE International Conference on Computer Communications (INFOCOM)},
+  year = {2016}
+}
+</pre>
+</div>
+</li>
+
+<li ><p>
+ Helei Cui, <b>Xingliang Yuan</b>, Yifeng Zheng, and Cong Wang, 
+<br><b>Enabling Secure and Effective Near-duplicate Detection over Encrypted In-network Storage</b><br>
+<i>IEEE International Conference on Computer Communications (INFOCOM)</i>, San Francisco, USA, 2016. (Acceptance ratio: 300/1644 = 18.25%)
+<br />
+<a href="javascript:toggleBibtex('CYZW-INFOCOM16')">[BibTeX]</a>
+<a href="http://ieeexplore.ieee.org/document/7524346/?arnumber=7524346" target="_blank">[Link]</a> 
+<a href="https://github.com/CongGroup/SecureNDDTest" target="_blank">[Code]</a>
+</p>
+<div id="bib_CYZW-INFOCOM16" class="bibtex noshow">
+<pre>
+@inproceedings{CYZW-INFOCOM16,
+  author = {Helei Cui and Xingliang Yuan and Yifeng Zheng and Cong Wang},
+  title = {Enabling Secure and Effective Near-duplicate Detection over Encrypted In-network Storage},
+  booktitle = {IEEE International Conference on Computer Communications (INFOCOM)},
+  year = {2016}
+}
+</pre>
+</div>
+</li>
+
+
+<li ><p>
+Jinghua Jiang, Xiaolin Gui, Zhenkui Shi, <b>Xingliang Yuan</b>, and Cong Wang, 
+<br><b>Towards Secure and Practical Targeted Mobile Advertising</b><br>
+<i>International Conference on Mobile Ad-hoc and Sensor Networks (MSN)</i>, Shenzhen, China, 2015. (<b>Best Paper Award</b>)
+<br />
+<a href="javascript:toggleBibtex('JGSYW-MSN16')">[BibTeX]</a>
+<a href="http://ieeexplore.ieee.org/document/7420928/?arnumber=7420928" target="_blank">[Link]</a> 
+</p>
+<div id="bib_JGSYW-MSN16" class="bibtex noshow">
+<pre>
+@inproceedings{JGSYW-MSN16,
+  author = {Jinghua Jiang and Xiaolin Gui and Zhenkui Shi and Xingliang Yuan and Cong Wang},
+  title = {Towards Secure and Practical Targeted Mobile Advertising},
+  booktitle = {International Conference on Mobile Ad-hoc and Sensor Networks (MSN)},
+  year = {2015}
+}
+</pre>
+</div>
+</li>
+
+
+<li ><p>
+ <b>Xingliang Yuan</b>, Helei Cui, Xinyu Wang and Cong Wang,
+<br><b>Enabling Privacy-assured Similarity Retrieval over Millions of Encrypted Records</b><br>
+<i>European Symposium on Research in Computer Security (ESORICS)</i>, Vienna, Austria, 2015. (Acceptance ratio: 58/293 = 19.8%)
+<br />
+<a href="javascript:toggleBibtex('YCWW-ESORICS15')">[BibTeX]</a>
+<a href="http://link.springer.com/chapter/10.1007/978-3-319-24177-7_3" target="_blank">[Link]</a>
+</p>
+<div id="bib_YCWW-ESORICS15" class="bibtex noshow">
+<pre>
+@inproceedings{YCWW-ESORICS15,
+  author = {Xingliang Yuan and Helei Cui and Xinyu Wang and Cong Wang},
+  title = {Enabling Privacy-assured Similarity Retrieval over Millions of Encrypted Records},
+  booktitle = {European Symposium on Research in Computer Security (ESORICS)},
+  year = {2015}
+}
+</pre>
+</div>
+</li>
+
+
+<li ><p>
+  <b>Xingliang Yuan</b>, Cong Wang and Kui Ren,
+<br><b>Enabling IP Protection for Outsourced Integrated Circuit Design</b><br>
+<i>ACM Asia Conference on Computer and Communications Security (AISACCS)</i>, Singapore, 2015. (Acceptance ratio for full papers: 48/269 = 17.8%)
+<br />
+<a href="javascript:toggleBibtex('YWR-ASIACCS15')">[BibTeX]</a>
+<a href="http://dl.acm.org/citation.cfm?id=2714601" target="_blank">[Link]</a> 
+</p>
+<div id="bib_YWR-ASIACCS15" class="bibtex noshow">
+<pre>
+@inproceedings{YWR-ASIACCS15,
+  author = {Xingliang Yuan and Cong Wang and Kui Ren},
+  title = {Enabling IP Protection for Outsourced Integrated Circuit Design},
+  booktitle = {ACM Asia Conference on Computer and Communications Security (AISACCS)},
+  year = {2015}
+}
+</pre>
+</div>
+</li>
+
+<li ><p>
+  <b>Yifeng Zheng*</b>, <b>Xingliang Yuan*</b>, Xinyu Wang, Jinghua Jiang, Cong Wang and Xiaolin Gui,
+<br><b>Enabling Encrypted Cloud Media Center with Secure Deduplication</b><br>
+<i>ACM Asia Conference on Computer and Communications Security (AISACCS)</i>, Singapore, 2015. (Acceptance ratio for full papers: 48/269 = 17.8%)
+<br />
+<a href="javascript:toggleBibtex('ZYWJWG-ASIACCS15')">[BibTeX]</a>
+<a href="http://dl.acm.org/citation.cfm?id=2714628" target="_blank">[Link]</a> 
+</p>
+<div id="bib_ZYWJWG-ASIACCS15" class="bibtex noshow">
+<pre>
+@inproceedings{ZYWJWG-ASIACCS15,
+  author = {Yifeng Zheng and Xingliang Yuan and Xinyu Wang and Jinghua Jiang and Cong Wang and Xiaolin Gui},
+  title = {Enabling Encrypted Cloud Media Center with Secure Deduplication},
+  booktitle = {ACM Asia Conference on Computer and Communications Security (AISACCS)},
+  year = {2015}
+}
+</pre>
+</div>
+</li>
+
+
+<li ><p>
+ Helei Cui, <b>Xingliang Yuan</b>, and Cong Wang, <br>
+ <b>Harnessing Encrypted Data in Cloud for Secure and Efficient Image Sharing from Mobile Devices</b><br>
+<i>IEEE International Conference on Computer Communications (INFOCOM)</i>, Hong Kong, China, 2015. (Acceptance ratio: 316/1640 = 19.2%)
+<br />
+<a href="javascript:toggleBibtex('CYW-INFOCOM15')">[BibTeX]</a>
+<a href="http://ieeexplore.ieee.org/document/7218657/?arnumber=7218657" target="_blank">[Link]</a> 
+</p>
+<div id="bib_CYW-INFOCOM15" class="bibtex noshow">
+<pre>
+@inproceedings{CYW-INFOCOM15,
+  author = {Helei Cui and Xingliang Yuan and Cong Wang},
+  title = {Harnessing Encrypted Data in Cloud for Secure and Efficient Image Sharing from Mobile Devices},
+  booktitle = {IEEE International Conference on Computer Communications (INFOCOM)},
+  year = {2015}
+}
+</pre>
+</div>
+</li>
+
+
+<li ><p>
+ <b>Xingliang Yuan</b>, Xingyu Wang, Cong Wang, Anna Squicciarini, and Kui Ren, <br>
+ <b>Enabling Privacy-preserving Image-centric Social Discovery</b><br>
+<i>IEEE International Conference on Distributed Computing Systems (ICDCS)</i>, Madrid, Spain, 2014. (Acceptance ratio: 66/500+ = 13%)
+<br />
+<a href="javascript:toggleBibtex('YWWSR-ICDCS14')">[BibTeX]</a>
+<a href="http://ieeexplore.ieee.org/document/6888896/?arnumber=6888896" target="_blank">[Link]</a> 
+</p>
+<div id="bib_YWWSR-ICDCS14" class="bibtex noshow">
+<pre>
+@inproceedings{YWWSR-ICDCS14,
+  author = {Xingliang Yuan and Xingyu Wang and Cong Wang and Anna Squicciarini and Kui Ren},
+  title = {Enabling Privacy-preserving Image-centric Social Discovery},
+  booktitle = {IEEE International Conference on Distributed Computing Systems (ICDCS)},
+  year = {2014}
+}
+</pre>
+</div>
+</li>
+
+
+
+<li ><p>
+ <b>Xingliang Yuan</b>, and Jia Wang, <br>
+ <b>Statistical Timing Verification for Transparently Latched Circuits through Structural Graph Traversal</b><br>
+<i>Asia and South Pacific Design Automation Conference (ASPDAC)</i>, Taipei, Taiwan, 2010.
+<br />
+<a href="javascript:toggleBibtex('YW-ASPDAC14')">[BibTeX]</a>
+<a href="http://dl.acm.org/citation.cfm?id=1899877" target="_blank">[Link]</a> 
+</p>
+<div id="bib_YW-ASPDAC14" class="bibtex noshow">
+<pre>
+@inproceedings{YW-ASPDAC14,
+  author = {Xingliang Yuan and Jia Wang},
+  title = {Statistical Timing Verification for Transparently Latched Circuits through Structural Graph Traversal},
+  booktitle = {Asia and South Pacific Design Automation Conference (ASPDAC)},
+  year = {2010}
+}
+</pre>
+</div>
+</li>
 
 
 
 
       
 
+      </div>
+      </li>
+      </ul>
     </div><!-- /.article-wrap -->
     {% if site.disqus_shortname and page.comments %}
       <section id="disqus_thread"></section><!-- /#disqus_thread -->
