--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -79,10 +79,52 @@ div.bibtex pre { font-size: 75%; overflow: auto;  width: 100%; padding: 0em 0em;
     <h1>{{ page.title }}</h1>
     <div class="article-wrap">
       {{ content }}
-
-
-
-
+	    
+	<h4 style="margin-bottom:0px;padding-top:10px;">Journal</h4>
+	<ul class="biblist">
+		<li ><p>
+		 <b>Yuchuan Luo</b>, xxx, and xxx, <br>
+		 <b>xxx</b><br>
+		<i>IEEE Transactions on xxx</i>, 2016
+		<br />
+		<a href="javascript:toggleBibtex('bib_yuchuan-trustcom16')">[BibTeX]</a>
+		<a href="" target="_blank">[Link]</a> 
+		</p>
+		<div id="bib_YWWSR-TDSC16" class="bibtex noshow">
+		<pre>
+		@inproceedings{bib_yuchuan-trustcom16,
+		  author = {Yuchuan Luo, xxx, and xxx},
+		  title = {xxx},
+		  booktitle = {IEEE Transactions on xxx},
+		  year = {2016}
+		}
+		</pre>
+		</div>
+		</li>
+	</ul  >
+	 
+	<h4 style="margin-bottom:0px;padding-top:20px;">Conference</h4>
+	<ul class="biblist">
+		<li ><p>
+		 <b>Yuchuan Luo</b>, Shaojing Fu, Dongsheng Wang, and Ming Xu, <br>
+		 <b>Securely outsourcing of bilinear pairings with untrusted servers for cloud storage</b><br>
+		<i>IEEE International Conference on Trust, Security and Privacy in Computing and Communications (TrustCom)</i>, Tianjing, China, 2016.
+		<br />
+		<a href="javascript:toggleBibtex('bib_yuchuan-trustcom16')">[BibTeX]</a>
+		<a href="" target="_blank">[Link]</a> 
+		</p>
+		<div id="bib_yuchuan-trustcom16" class="bibtex noshow">
+		<pre>
+		@inproceedings{bib_yuchuan-trustcom16,
+		  author = {Yuchuan Luo, Shaojing Fu, Dongsheng Wang and Ming Xu},
+		  title = {Securely outsourcing of bilinear pairings with untrusted servers for cloud storage},
+		  booktitle = {IEEE International Conference on Trust, Security and Privacy in Computing and Communications (TrustCom)},
+		  year = {2016}
+		}
+		</pre>
+		</div>
+      		</li>
+      </ul>
 
     </div><!-- /.article-wrap -->
     {% if site.disqus_shortname and page.comments %}
